# ansible-role-gitlab

./: .gitignore  .travis.yml  .yamllint  Makefile  README.md  ansible.cfg  devbox.json  pyproject.toml  requirements.txt  requirements.yml
.github/workflows/: lint.yml  main.yml  molecule.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  create.yml  destroy.yml  molecule.yml  playbook.yml  side_effect.yml  verify.yml
molecule/default/tests/: test_default.py
tasks/: main.yml
templates/: gitlab-backup.sh.j2  gitlab-restore.sh.j2  gitlab.rb.j2
test/: test.yml  test_gitlab.py
test/roles/: nephelaiio.gitlab
vars/: Debian.yml  RedHat.yml
