[tool.poetry]
name = "nephelaiio.gitlab"
version = "0.1.0"
description = ""
authors = ["pokerops"]

[tool.poetry.dependencies]
python = "^3.11"
ansible-lint = "^25.4.0"
molecule = "^25.4.0"
cryptography = "^44.0.3"
yamllint = "^1.37.1"
netaddr = "^1.3.0"
molecule-plugins = { extras = ["docker"], version = "^23.7.0" }
setuptools = "^80.9.0"
docker = "^7.1.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ansible = "^11.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
